5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4414/executions/1635_2442.log
== SUBMITION (2019-04-08 14:21:52) 
-- CODE:
x= int(input("Digite um numero: "))

if (num % 2 == 0)
	mensagem = "Par"
else
	mensagem = "Impar"

print(mensagem)

-- EXECUTION TIME:
0.14475
-- ERROR:
  File "/home/codebench/codes/1635/2442/main.py", line 3
    if (num % 2 == 0)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:22:34) 
-- CODE:
x= int(input("Digite um numero: "))

if (num % 2 == 0)
	mensagem = "Par"
else
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if (num % 2 == 0)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:23:02) 
-- CODE:
x= int(input("Digite um numero: "))

if (x%2 == 0)
	mensagem = "Par"
else
	mensagem = "Impar"

print(mensagem)

-- EXECUTION TIME:
0.122188
-- ERROR:
  File "/home/codebench/codes/1635/2442/main.py", line 3
    if (x%2 == 0)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:23:04) 
-- CODE:
x= int(input("Digite um numero: "))

if (x%2 == 0)
	mensagem = "Par"
else
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if (x%2 == 0)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:30:35) 
-- CODE:
x = int(input("Digite um numero: "))

if ("x" % 2 == 0)
	mensagem = "Par"
else
	mensagem = "Impar"

print(mensagem)

-- EXECUTION TIME:
0.183311
-- ERROR:
  File "/home/codebench/codes/1635/2442/main.py", line 3
    if ("x" % 2 == 0)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:30:37) 
-- CODE:
x = int(input("Digite um numero: "))

if ("x" % 2 == 0)
	mensagem = "Par"
else
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if ("x" % 2 == 0)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:32:10) 
-- CODE:
x = int(input("Digite um numero: "))

if (x % 2 == 0)
	mensagem = "Par"
else
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 3
    if (x % 2 == 0)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:32:35) 
-- CODE:
x = int(input("Digite um numero: "))

if (x % 2 = 0)
	mensagem = "Par"
else
	mensagem = "Impar"

print(mensagem)

-- EXECUTION TIME:
0.128241
-- ERROR:
  File "/home/codebench/codes/1635/2442/main.py", line 3
    if (x % 2 = 0)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:33:12) 
-- CODE:
x = int(input("numero:"))

if (x % 2 = 0)
	mensagem = "Par"
else
	mensagem = "Impar"

print(mensagem)

-- EXECUTION TIME:
0.152261
-- ERROR:
  File "/home/codebench/codes/1635/2442/main.py", line 3
    if (x % 2 = 0)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:36:01) 
-- CODE:
x = int(input("numero:"))

if (x % 2 = 0)
	print("par")
else
	print("impar")


-- EXECUTION TIME:
0.120275
-- ERROR:
  File "/home/codebench/codes/1635/2442/main.py", line 3
    if (x % 2 = 0)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:37:00) 
-- CODE:
x = int(input("numero:"))

if (x % 2 = 0):
	print("par")
else:
	print("impar")


-- EXECUTION TIME:
0.133305
-- ERROR:
  File "/home/codebench/codes/1635/2442/main.py", line 3
    if (x % 2 = 0):
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:37:03) 
-- CODE:
x = int(input("numero:"))

if (x % 2 = 0):
	print("par")
else:
	print("impar")


-- ERROR:
File "XXXX", line 3
    if (x % 2 = 0):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:37:56) 
-- CODE:
x = int(input("numero:"))

if (x % 2 = 0):
	print("par")
else:
	print("impar")


-- EXECUTION TIME:
0.147158
-- ERROR:
  File "/home/codebench/codes/1635/2442/main.py", line 3
    if (x % 2 = 0):
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:39:32) 
-- CODE:
x = int(input("numero:"))


if (x % 2 = 0):
	print("par")
else:
	print("impar")
	


-- ERROR:
File "XXXX", line 4
    if (x % 2 = 0):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:41:31) 
-- CODE:
x = int(input("numero:"))


if (x % 2 == 0):
	print("par")
else:
	print("impar")
	


-- EXECUTION TIME:
0.205725
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
impar
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
par
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:42:29) 
-- CODE:
x = int(input("numero:"))


if (x % 2 == 0):
	print("par")
else:
	print("impar")
	


-- OUTPUT:
impar
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:42:36) 
-- CODE:
x = int(input("numero:"))


if (x % 2 == 0):
	print("par")
else:
	print("impar")
	


-- OUTPUT:
impar
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
